unpackaged/main/default/objects/pse__SkillSet_Skill__c/pse__SkillSet_Skill__c.object-meta.xml
<CustomObject>
    <description>A junction object that creates a many-to-many relationship between the Skill Set and Skill objects.</description>
    <label>Skill Set Skill</label>
    <nameField>
        <displayFormat>SSS-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Set Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>