unpackaged/main/default/objects/pse__SkillSet_Skill__c/fields/pse__Rating__c.field-meta.xml
<CustomField>
    <fullName>pse__Rating__c</fullName>
    <description>Picklist that displays the ratings depending on the resource's proficiency on a particular skill or certification.</description>
    <inlineHelpText>Used to rate the resource's proficiency on a particular skill or certification.</inlineHelpText>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <label>0 - No Rating</label>
            </value>
            <value>
                <fullName>1 - Limited Exposure</fullName>
            </value>
            <value>
                <fullName>2 - Some Familiarity</fullName>
            </value>
            <value>
                <fullName>3 - Comfortable</fullName>
            </value>
            <value>
                <fullName>4 - Strong</fullName>
            </value>
            <value>
                <fullName>5 - Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>