unpackaged/main/default/objects/pse__SkillSet_Skill__c/fields/pse__Skill_Certification__c.field-meta.xml
<CustomField>
    <fullName>pse__Skill_Certification__c</fullName>
    <description>Master detail relationship to Skill, Certification and Categories.</description>
    <label>Skill / Certification</label>
    <referenceTo>pse__Skill__c</referenceTo>
    <relationshipName>Skill_Set_Skill_Junction</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>