unpackaged/main/default/objects/pse__SkillSet_Skill__c/fields/pse__Skill_Set__c.field-meta.xml
<CustomField>
    <fullName>pse__Skill_Set__c</fullName>
    <description>Master detail relationship to Skill Set.</description>
    <label>Skill Set</label>
    <referenceTo>pse__Skill_Set__c</referenceTo>
    <relationshipName>Skill_Set_Skill_Junction</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>